--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,11 @@
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
+      <dependency>
+          <groupId>be.atbash.json</groupId>
+          <artifactId>octopus-accessors-smart</artifactId>
+          <version>0.9.1</version>
+      </dependency>
   </dependencies>
 
   <build>
