--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <!-- spring版本号 -->
-    <spring.version>4.3.5.RELEASE</spring.version>
+    <spring.version>4.3.18.RELEASE</spring.version>
     <!-- mybatis版本号 -->
     <mybatis.version>3.4.1</mybatis.version>
   </properties>
@@ -47,7 +47,7 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.8.7</version>
+      <version>2.8.11.2</version>
     </dependency>
 
 
@@ -81,6 +81,12 @@
     </dependency>
 
     <!-- Spring -->
+
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-context-support</artifactId>
+          <version>5.0.0.RELEASE</version>
+      </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
@@ -142,10 +148,32 @@
           <artifactId>octopus-accessors-smart</artifactId>
           <version>0.9.1</version>
       </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi</artifactId>
+      <version>3.17</version>
+    </dependency>
+    <dependency>
+     <groupId>org.apache.shiro</groupId>
+    <artifactId>shiro-core</artifactId>
+      <version>1.2.3</version>
+    </dependency>
+
+    <!--邮件发送-->
+      <dependency>
+          <groupId>com.sun.mail</groupId>
+          <artifactId>javax.mail</artifactId>
+          <version>1.6.1</version>
+      </dependency>
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3.1</version>
+    </dependency>
   </dependencies>
 
   <build>
-    <finalName>ChatRobot</finalName>
+    <finalName>lanxiang</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
