--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -38,7 +38,10 @@
     <!-- 匹配所有请求，此处也可以配置成 *.do 形式 -->
     <url-pattern>*.do</url-pattern>
   </servlet-mapping>
-
+  <error-page>
+    <error-code>404</error-code>
+    <location>/WEB-INF/404.jsp</location>
+  </error-page>
   <welcome-file-list>
     <welcome-file>/WEB-INF/login.jsp</welcome-file>
   </welcome-file-list>
